--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ opt-level = "z"
 
 [features]
 default = ["std"]
-std = ["alloc", "anyhow/std",  "esp-idf-sys/std", "esp-idf-hal/std", "embedded-svc/std"]
+std = ["alloc", "anyhow/std", "esp-idf-sys/std", "esp-idf-hal/std", "embedded-svc/std"]
 alloc = ["cstr_core/alloc", "anyhow", "esp-idf-hal/alloc", "embedded-svc/alloc"]
 #experimental = ["embedded-svc/experimental"]
 
@@ -29,6 +29,15 @@ esp-idf-hal = { version = "0.39", default-features = false, features = ["esp-idf
 rand = "0.8.5"
 esp-idf-svc = "0.43.3"
 protocol = { git = "https://github.com/rust-iot-things/protocol" }
+byteorder = "1.4.3"
+
+[dependencies.uuid]
+version = "1.2.2"
+features = [
+    "v4",                # Lets you generate random UUIDs
+    "fast-rng",          # Use a faster (but still sufficiently random) RNG
+    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
+]
 
 [build-dependencies]
 embuild = "0.29"
